--- a/style.css
+++ b/style.css
@@ -130,6 +130,14 @@ img {
   grid-template-columns: repeat(2, 1fr);
   padding: 3rem;
 }
+.info-2 {
+  background-color: var(--primary);
+  box-shadow: (var(--shadow));
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 2rem;
+}
 /* portfolio */
 .portfolio {
   display: grid;
@@ -170,7 +178,15 @@ footer {
   .info {
     grid-template-columns: 1fr;
   }
+  .info-2 {
+    grid-template-columns: 1fr;
+  }
   .info .btn {
+    display: block;
+    text-align: center;
+    margin: auto;
+  }
+  .info-2 .btn {
     display: block;
     text-align: center;
     margin: auto;
